bitfield/tests/09-variant-out-of-range.stderr
error[E0080]: evaluation panicked: expected variant value to fit inside bit range
  --> tests/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ evaluation of `variant_External_of_enum_DeliveryMode_is_in_bit_range` failed here
